--- a/samples/models_rendering/Makefile
+++ b/samples/models_rendering/Makefile
@@ -6,7 +6,8 @@ INCLUDES	:= include
 
 LIBS = -lvitaGL -lSceLibKernel_stub -lSceAppMgr_stub -lSceAppUtil_stub -lmathneon \
 	-lc -lSceCommonDialog_stub -lm -lSceGxm_stub -lSceDisplay_stub -lSceSysmodule_stub \
-	-lAssImp -lzip -lz -lvitashark -lSceShaccCg_stub -lSceKernelDmacMgr_stub -lSceCtrl_stub \
+	`arm-vita-eabi-pkg-config --libs assimp` \
+	-lzip -lz -lvitashark -lSceShaccCg_stub -lSceKernelDmacMgr_stub -lSceCtrl_stub \
 	-ltoloader -lSceShaccCgExt -ltaihen_stub
 
 CFILES   := $(foreach dir,$(SOURCES), $(wildcard $(dir)/*.c))
